--- a/package.json
+++ b/package.json
@@ -4,12 +4,17 @@
   "version": "4.0.0",
   "author": "Taylor Bryant <taylor@bryant.io>",
   "dependencies": {
+    "@nivo/bar": "^0.61.1",
+    "@nivo/line": "^0.61.1",
     "gatsby": "2.21.7",
     "gatsby-plugin-manifest": "2.4.1",
     "gatsby-plugin-offline": "3.2.0",
     "gatsby-plugin-postcss": "2.3.0",
     "gatsby-plugin-react-helmet": "3.3.0",
     "gatsby-plugin-sharp": "2.6.0",
+    "gatsby-source-filesystem": "^2.3.0",
+    "gatsby-transformer-csv": "^2.3.0",
+    "moment": "2.24.0",
     "prop-types": "15.7.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
