--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "@nivo/line": "^0.61.1",
     "animate.css": "^4.0.0",
     "gatsby": "2.21.7",
+    "gatsby-plugin-google-analytics": "^2.3.2",
     "gatsby-plugin-manifest": "2.4.1",
     "gatsby-plugin-offline": "3.2.0",
     "gatsby-plugin-postcss": "2.3.0",
     "gatsby-plugin-react-helmet": "3.3.0",
+    "gatsby-plugin-robots-txt": "^1.5.0",
     "gatsby-plugin-sharp": "2.6.0",
     "gatsby-source-filesystem": "^2.3.0",
     "gatsby-transformer-csv": "^2.3.0",
