--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@nivo/bar": "^0.61.1",
     "@nivo/line": "^0.61.1",
+    "@nivo/scatterplot": "^0.67.0",
     "animate.css": "^4.0.0",
     "gatsby": "2.21.7",
     "gatsby-plugin-google-analytics": "^2.3.2",
