--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "version": "4.0.0",
   "author": "Taylor Bryant <taylor@bryant.io>",
   "dependencies": {
-    "@nivo/bar": "^0.61.1",
-    "@nivo/line": "^0.61.1",
+    "@nivo/bar": "^0.67.0",
+    "@nivo/line": "^0.67.0",
     "@nivo/scatterplot": "^0.67.0",
+    "@nivo/core": "^0.67.0",
     "animate.css": "^4.0.0",
     "gatsby": "2.21.7",
     "gatsby-plugin-google-analytics": "^2.3.2",
