--- a/package.json
+++ b/package.json
@@ -45,7 +45,13 @@
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
+    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1",
+    "dates": "git-date-extractor --outputToFile --onlyIn ./src/data/"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "git diff --cached --name-only --diff-filter=ACMRTUXB -z | xargs -0 node update-stamps.js"
+    }
   },
   "devDependencies": {
     "@tailwindcss/custom-forms": "0.2.1",
@@ -57,6 +63,8 @@
     "eslint-plugin-import": "2.20.2",
     "eslint-plugin-react": "7.19.0",
     "gatsby-plugin-eslint": "2.0.8",
+    "git-date-extractor": "^4.0.1",
+    "husky": "^5.1.3",
     "prettier": "2.0.5",
     "tailwindcss": "1.4.1"
   },
