--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "serve": "gatsby serve",
     "clean": "gatsby clean",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1",
-    "dates": "git-date-extractor --outputToFile --onlyIn ./src/data/"
+    "dates": "git-date-extractor --outputToFile --onlyIn ./src/data/",
+    "postinstall": "husky install"
   },
   "husky": {
 		"hooks": {
